--- a/frontend/src/assets/scss/components/_messageList.scss
+++ b/frontend/src/assets/scss/components/_messageList.scss
@@ -1,6 +1,7 @@
 .messageList {
   width: 100%;
-  height: 90%;
+  // height: 90%;
+  flex: 1;
   padding: 10px 40px;
   display: flex;
   flex-direction: column;
